Validacao de CPF unico

--- a/pedidos/templates/pedidos/listapedido.html
+++ b/pedidos/templates/pedidos/listapedido.html
@@ -1,5 +1,7 @@
 {% extends 'partials/_base.html' %}
 {% load filter %}
+
+{% block titulo %}Meus pedidos{% endblock titulo %}
 {% block conteudo %}
 
 <div class="row">
