--- a/produto/templates/produto/carrinho.html
+++ b/produto/templates/produto/carrinho.html
@@ -1,6 +1,7 @@
 {% extends 'partials/_base.html' %}
 {% load filter %}
 
+{% block titulo %}Seu carrinho{% endblock titulo %}
 {% block conteudo %}
 
 {% if carrinho %}
