--- a/produto/templates/produto/finalizar.html
+++ b/produto/templates/produto/finalizar.html
@@ -1,5 +1,7 @@
 {% extends 'partials/_base.html' %}
 {% load filter %}
+
+{% block titulo %}Resumo do Pedido{% endblock titulo %}
 {% block conteudo %}
 <main class="container mt-4 mb-4">
 
