--- a/produto/templates/produto/produto.html
+++ b/produto/templates/produto/produto.html
@@ -1,5 +1,7 @@
 {% extends 'partials/_base.html' %}
 {% load filter %}
+
+{% block titulo %}{{produto.nome}}{% endblock titulo %}{{produto.nome}}
 {% block conteudo %}
 
 <div class="row">
