--- a/produto/templates/produto/produtos.html
+++ b/produto/templates/produto/produtos.html
@@ -1,5 +1,6 @@
 {% extends 'partials/_base.html' %}
 
+{% block titulo %}SHOppingTech{% endblock titulo %}
 {% block conteudo %}
 {% include 'partials/_cards.html' %}
 
