--- a/pedidos/templates/pedidos/pagar.html
+++ b/pedidos/templates/pedidos/pagar.html
@@ -1,6 +1,8 @@
 {% extends 'partials/_base.html' %}
 {% load filter %}
 {% load static %}
+
+{% block titulo %}Efetuar Pagamento{% endblock titulo %}
 {% block conteudo %}
 <div class="row">
     <div class="col">
