--- a/perfil/templates/perfil/create_perfil.html
+++ b/perfil/templates/perfil/create_perfil.html
@@ -1,6 +1,8 @@
 {% extends 'partials/_base.html' %}
 {% load crispy_forms_tags %}
 
+{% block titulo %}Perfil{% endblock titulo %}
+
 {% block conteudo %}
 
 <div class="row">
